# LexiClass

./: .gitignore  .pylintrc  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PLAN.md  PLANNING_INDEX.md  PLANNING_SUMMARY.md  PROJECT_ROADMAP.md  README.md  dataset_preparation.md  document_classifier.py  pyproject.toml  wikipedia_loader.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  DATASET_PREP.md  MIGRATION_GUIDE.md  ML_EXTENSIBILITY_PLAN.md  PLUGIN_DEVELOPMENT_GUIDE.md  USER_GUIDE.md
scripts/: benchmark.py  build_index_multi.py  build_index_single.py  download_dataset.py  export_wikipedia.py
scripts/multi_process_index_poc/: benchmark.py  build_index_multi.py  build_index_single.py
src/lexiclass/: __init__.py  __main__.py  classifier.py  config.py  encoding.py  evaluation.py  exceptions.py  features.py  index.py  interfaces.py  io.py  logging_utils.py  memory_utils.py  plugins.py  tokenization.py
src/lexiclass/cli/: main.py
src/lexiclass/datasets/: __init__.py  wikipedia.py
src/lexiclass/plugins/: __init__.py  base.py  registry.py
src/lexiclass/plugins/classifiers/: __init__.py  svm.py  transformer.py  xgboost.py
src/lexiclass/plugins/features/: __init__.py  bow.py  fasttext.py  sbert.py  tfidf.py
src/lexiclass/plugins/tokenizers/: __init__.py  huggingface.py  icu.py  sentencepiece.py  spacy.py
